--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
             justify-content: space-between;
             padding: 5px;
             position: relative;
-            height: 26px;
-            width: 50px;
+            height: 33px;
+            width: 60px;
             transform: scale(1.5);
         }
 
@@ -171,25 +171,25 @@
             position: absolute;
             top: 2px;
             left: 2px;
-            height: 22px;
-            width: 22px;
-            transform: translateX(0px);
+            height: 29px;
+            width: 29px;
+            transform: translateX(-1px);
             transition: transform 0.2s linear;
         }
 
         .checkbox:checked+.label .ball {
-            transform: translateX(24px);
+            transform: translateX(28px);
         }
 
 
         .fa-moon {
             color: #f1c40f ;
-           
+            font-size: 20px;
         }
 
         .fa-sun {
             color: #f39c12 ;
-           
+            font-size: 20px;
         }
 
         .white {
